--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Ayisat Android Lab</string>
+    <string name="hello_message">Hello world</string>
+    <string name="button_message">I\'m a button</string>
 </resources>
