--- a/app/src/main/res/values-en-rAU/strings.xml
+++ b/app/src/main/res/values-en-rAU/strings.xml
@@ -2,5 +2,7 @@
 <resources>
     <string name="app_name">Ayisat Android Lab</string>
     <string name="hello_message">Heya</string>
-    <string name="button_message">am a butto</string>
+    <string name="button_message">am a button</string>
+    <string name="editmessage">am an EditText</string>
+    <string name="hinttext">write something here</string>
 </resources>
