--- a/app/src/main/res/values-en-rAU/strings.xml
+++ b/app/src/main/res/values-en-rAU/strings.xml
@@ -5,4 +5,7 @@
     <string name="button_message">am a button</string>
     <string name="editmessage">am an EditText</string>
     <string name="hinttext">write something here</string>
+    <string name="checkmessage">Do you drink coffee?</string>
+    <string name="radiomessage">Do you drink coffee?</string>
+    <string name="switchmessage">Do you drink coffee?</string>
 </resources>
