--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -5,4 +5,7 @@
     <string name="button_message">Je suis un bouton</string>
     <string name="editmessage">je suis un editeur de texte</string>
     <string name="hinttext">ecris quelque chose ic</string>
+    <string name="checkmessage">Bois-tu du cafe?</string>
+    <string name="radiomessage">Bois-tu du cafe?</string>
+    <string name="switchmessage">Bois-tu du cafe?</string>
 </resources>
