--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="button_message">I\'m a button</string>
     <string name="editmessage">I\'m an EditText</string>
     <string name="hinttext">Write something here</string>
+    <string name="checkmessage">Do you drink coffee?</string>
+    <string name="radiomessage">Do you drink coffee?</string>
+    <string name="switchmessage">Do you drink coffee</string>
+    <string name="image_button_description">width and height of image button</string>
 </resources>
