--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Ayisat Android Lab</string>
     <string name="hello_message">Hello world</string>
     <string name="button_message">I\'m a button</string>
+    <string name="change_picture">CHANGE PICTURE</string>
+    <string name="call_number">CALL NUMBER</string>
+    <string name="enter_phone_number">Enter Phone Number</string>
+    <string name="textview">textview</string>
 </resources>
